# torneo-service/src/main/java/com/connectedgames/core/dto/IscrizioneInput.java
@@ -1,8 +1,10 @@
 package com.connectedgames.core.dto;
 
+import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
 import java.util.UUID;
 
 public record IscrizioneInput(
-    @NotNull UUID utenteId
+    @NotNull UUID utenteId,
+    @NotBlank String localeId
 ) {}
